# Sohail-Data-Engg-Portfolio

real-time-analytics-on-gcp/: README.md
supply-chain-batch-platform/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  HANDBOOK.md  PROJECT_PROGRESS.md  README.md  RUNBOOK.md  pyproject.toml  requirements-dev.txt
supply-chain-batch-platform/airflow/: README.md  docker-compose.airflow.yml
supply-chain-batch-platform/bigquery/: README.md
supply-chain-batch-platform/common/: README.md  pyproject.toml
supply-chain-batch-platform/common/scb_common/: __init__.py  config.py  context.py  dq.py  errors.py  logging.py  metadata.py  monitoring.py  retry.py  schema.py
supply-chain-batch-platform/common/scb_common/stores/: __init__.py  bigquery.py
supply-chain-batch-platform/common/tests/: test_config.py  test_context.py  test_dq.py  test_logging.py  test_metadata.py  test_metadata_bq.py  test_monitoring.py  test_retry.py  test_schema.py
supply-chain-batch-platform/config/: README.md
supply-chain-batch-platform/data_generators/: README.md  __init__.py  generate.py  pyproject.toml  reference.py  salesforce.py  sap_erp.py  supplier_portal.py  tms.py  wms.py
supply-chain-batch-platform/data_generators/tests/: test_generators.py
supply-chain-batch-platform/docs/: README.md  cost-optimization.md  developer-guide.md  disaster-recovery.md  interview-questions.md  lessons-learned.md  phase-02-local-environment.md  phase-03-terraform-foundation.md  phase-04-bigquery-metadata.md  phase-05-ingestion.md  phase-06-spark-silver.md  phase-07-gold.md  phase-09-monitoring.md  (+10 more)
(+169 files in other folders)
